force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <description>This object save records of daily work entries.</description>
    <label>Timesheet</label>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>