force-app/main/default/objects/Timesheet__c/fields/Daily_Task__c.field-meta.xml
<CustomField>
    <fullName>Daily_Task__c</fullName>
    <label>Daily Task</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>