force-app/main/default/objects/Timesheet__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Represents the working date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>