force-app/main/default/objects/Timesheet__c/fields/Logout_Time__c.field-meta.xml
<CustomField>
    <fullName>Logout_Time__c</fullName>
    <label>Logout Time</label>
    <type>Time</type>
</CustomField>