force-app/main/default/objects/Timesheet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day Leave</fullName>
            </value>
            <value>
                <fullName>Half Day - SH</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Half Day - FH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>