force-app/main/default/objects/Timesheet__c/fields/Total_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Hours__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Login_Time__c),
        ISBLANK(Logout_Time__c)
    ),
    &quot;&quot;,
    TEXT(
        FLOOR(
            (Logout_Time__c - Login_Time__c) / 3600000
        )
    ) &amp; &quot; hrs &quot; &amp;
    TEXT(
        FLOOR(
            MOD( (Logout_Time__c - Login_Time__c), 3600000 ) / 60000
        )
    ) &amp; &quot; mins&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Working Hours</label>
    <type>Text</type>
</CustomField>