force-app/main/default/objects/Timesheet__c/validationRules/Require_Login_Logout_When_Working.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Login_Logout_When_Working</fullName>
    <active>true</active>
    <description>Makes login mandatory when status = Working</description>
    <errorConditionFormula>AND(
    TEXT(Status__c) = &quot;Working&quot;,    
        ISBLANK(Login_Time__c)    
)</errorConditionFormula>
    <errorMessage>Login time is required when Status is Working.</errorMessage>
</ValidationRule>